# Grins_irrigation_platform

./: .dockerignore  .env  .env.example  .gitignore  .postman.json  .railwayignore  .vercelignore  BLUEPRINT.md  BUG-HUNT-REPORT.md  CHANGELOG.md  CLIENT-PRESENTATION.md  CREDENTIALS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEVLOG.md  DOCKER.md  Deployment Step-by-Step Instructions.md  Dockerfile  FUNCTIONAL-TEST-GUIDE.md  GRINS-VS-HOUSECALL-PRO-COST-ANALYSIS.md  Housecall_Pro_Feature_Price_Analysis.md  KIRO-TOOLING-IMPROVEMENTS.md  Kiro_Hackathon_Introduction.md  LeadErrorSolution.md  NETLIFY-DEPLOYMENT-GUIDE.md  OVERNIGHT-RALPH-WIGGUM.md  PHASE-1-PLANNING.md  PHASE-11-PLANNING.md  PHASE-2-PLANNING.md  PHASE-4-PLANNING.md  PHASE-5-PLANNING.md  PHASE-6-PLANNING.md  PHASE-7-PLANNING.md  PHASE-8-PLANNING.md  PLANNING-SESSION-SUMMARY.md  POSTMAN-POWER-GUIDE.md  Phase-12-Planning.md  RALPH-WIGGUM-STARTUP.md  README.md  RalphCompleteGuide.md  (+23 more)
.claude/: session-resume.md  settings.json  statusline.sh
.firecrawl/: adobesign.json  boldsign-detail.json  boldsign-pricing-raw.json  boldsign.json  boxsign.json  esignatures-io.json  opensign.json  pandadoc.json  signeasy.json  signrequest-api.json  signwell-api-raw.json  signwell-confirm.json  signwell-help.json  signwell-rate.json  signwell-rate2.json  signwell-reddit.json  signwell-site.json  signwell.json  sw-business-api.json  sw-ranges.json  sw-rate2.json  xodo.json  yousign.json  zohosign.json
.kiro/: README-devlog-system.md  README-prompt-management.md
Markdown/: ARCHITECTURE.md  CLIENT-PRESENTATION.md  COMPETITOR-ANALYSIS-FEATURES.md  CONSULTING-FIRM-COST-ANALYSIS.md  DOCKER-TEST-RESULTS.md  FRONTEND-UI-TEST-GUIDE.md  Grins_Irrigation_Backend_System.md  HOUSECALL-PRO-COMPARISON.md  IMPLEMENTATION-STATUS.md  KIRO-FEATURE-STRATEGY.md  OVERNIGHT-RALPH-WIGGUM.md  PHASE-10-PLANNING.md  PHASE-2-PLANNING.md  PHASE-2-USER-TESTING.md  PHASE-3-PLANNING.md  PHASE-4-PLANNING-ADDONS.md  PHASE-9-PLANNING.md  Platform_Architecture_Ideas.md  RALPH-WIGGUM-PLANNING.md  RalphImprovements.md  phase5-map-ui-design-research.md  product.md  service-patterns.md
Testing Procedure/: 00-preflight.md  01-path-a-lead-intake.md  02-path-b-lead-to-sales.md  03-path-c-sales-pipeline.md  04-path-d-e-confirmation-yrc.md  05-path-f-onsite.md  06-path-g-admin-cancel.md  07-path-h-year-rollover.md  08-path-i-dashboard.md  09-path-j-schedule-all.md  10-customer-landing-flow.md  99-cleanup.md  README.md
UI_RE-DESIGN/: App.tsx  README.md  index.html  metadata.json  package.json
Viktor_excel/: 2026 Job Requests .xlsx  April 16th 5_00 PM List .xlsx  Compare List.xlsx  Database_list.xlsx  Duplicate Tracking.xlsx  Final List with Add-ons.BACKUP-20260415.xlsx  Final List with Add-ons.PRE-UPDATE-BACKUP.xlsx  Final List with Add-ons.xlsx  Final List.xlsx  Final.xlsx  Recommendations - Missing Data from Database List.xlsx  Semi Final List.xlsx  Service Packege List.csv  Spring Start Reponses.xlsx  Stripe List.csv  scheduling_analysis_20260414.md
backups/: BACKUP-INSTRUCTIONS.md
bughunt/: 2026-03-26-e2e-battle-test.md  2026-03-27-service-packages-e2e.md  2026-04-07-asap-platform-fixes-regression.md  2026-04-09-communications-deep-dive-round-2.md  2026-04-09-communications-poll-workflow-deep-dive.md  2026-04-14-customer-lifecycle-deep-dive.md  2026-04-14-lead-form-sms-consent-rollback.md  2026-04-16-cr1-cr6-e2e-verification.md  2026-04-16-critical-fixes-plan.md  2026-04-16-customer-lifecycle-bughunt.md  2026-04-16-high-fixes-plan.md  2026-04-16-medium-bugs-plan.md  2026-04-28-stripe-payment-links-e2e-bugs.md  2026-04-29-ai-scheduling-system-validation.md  2026-04-29-pre-existing-tsc-errors.md  2026-04-30-resource-timeline-loading-and-capacity-bugs.md  2026-04-30-resource-timeline-view-deep-dive.md  2026-05-01-appointment-modal-payment-estimate-pricelist-audit.md  2026-05-01-pricelist-seed-data.json  2026-05-02-mobile-viewport-audit.md  2026-05-04-master-plan-run-findings.md  job_actions_missing.md  session_timeout.md
deployment-instructions/: 2026-03-26-production-deployment-instructions.md  2026-03-28-preferred-service-timeline.md  2026-04-03-google-sheets-leads-pipeline-fix.md  2026-04-09-dev-to-main-deployment.md  2026-05-05-dev-to-main-deployment.md  callrail-webhook-setup.md  service-package-purchases.md
diagrams/: customer-lifecycle.excalidraw
docs/: 2026-05-12-verification-and-clarifications.md  AGENT_COMMUNICATION.md  AI_API.md  AI_SETUP.md  AI_USER_GUIDE.md  VercelAndRailwaySetup.md  agent-browser.md  email-classification-audit.md  lead-form-cors-fix.md  messaging-catalog.md  noreply-mailbox-status.md  payments-runbook.md  payments-tech-1-pager.md
e2e/: _lib.sh  integration-full-happy-path.sh  payment-links-flow.sh  phase-0-estimate-approval-autojob.sh  phase-1-pricelist-seed.sh  phase-2-pricelist-editor-fast.sh  phase-2-pricelist-editor.sh  phase-3-estimate-line-item-picker.sh  phase-4-payment-timeline-receipts.sh  phase-5-polish.sh  schedule-resource-timeline.sh  tech-companion-mobile.sh  test-webauthn-passkey.sh
feature-developments/: Schedule-Estimate-Visit-Reference.html  preferred-service-timeline.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vitest.config.ts
instructions/: customer_lifecycle.excalidraw  update2_instructions.md
issues/: 2026-03-28-premium-monthly-visit-count-mismatch.md
output/: results.json  users.json
production-bugs/: 2026-04-26-webhook-empty-last-name-orphaned-agreements.md  2026-04-27-webhook-empty-last-name-prod-verification.md  2026-04-27-webhook-empty-last-name-recovery-runbook.md
schedule-estimate-visit-handoff/: SPEC.md
scripts/: backfill_stripe_customers.py  check-alembic-heads.sh  demo_route_optimization.py  dev.sh  diagnose_google_sheet.py  e2e-tests.sh  functional_test_api.sh  functional_test_tasks_2_6.py  harden_admin_password.py  healthcheck-portal-base-url.sh  import_excel_data.py  init-db.sql  migrate_work_requests_to_sales.py  ralph-overnight.sh  ralph.sh  seed_e2e_payment_links.py  setup.sh  (+25 more)
(+2498 files in other folders)
