[project]
name = "grins-irrigation-platform"
version = "0.1.0"
description = "Business optimization platform for Grins Irrigations with AI-powered development tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Grins Irrigations Development Team"}
]
keywords = ["irrigation", "business-optimization", "ai-development", "platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ruff>=0.1.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "structlog>=25.5.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "email-validator>=2.1.0",
    "greenlet>=3.0.0",
    "timefold>=1.24.0b0",
    "psycopg2-binary>=2.9.11",
    "openai>=2.15.0",
    "twilio>=9.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "faker>=19.0.0",
    "hypothesis>=6.92.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/kirillDR01/Grins_irrigation_platform"
Repository = "https://github.com/kirillDR01/Grins_irrigation_platform"
Documentation = "https://github.com/kirillDR01/Grins_irrigation_platform#readme"
"Bug Tracker" = "https://github.com/kirillDR01/Grins_irrigation_platform/issues"

[project.scripts]
grins-platform = "grins_platform.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grins_platform"]

[tool.uv]
# uv-specific configuration

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "faker>=19.0.0",
    "pyright>=1.1.408",
    "hypothesis>=6.92.0",
]

[tool.ruff]
# Target Python 3.9+ for modern features
target-version = "py39"

# Line length optimized for readability and AI analysis
line-length = 88
indent-width = 4

# Include common directories but exclude build artifacts
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Comprehensive rule selection optimized for AI self-correction
select = [
    # Pyflakes (F) - Essential error detection
    "F",
    # pycodestyle errors (E) - Code style consistency  
    "E",
    # pycodestyle warnings (W) - Additional style issues
    "W", 
    # isort (I) - Import organization
    "I",
    # pep8-naming (N) - Naming conventions
    "N",
    # pyupgrade (UP) - Modern Python syntax
    "UP",
    # flake8-bugbear (B) - Bug detection
    "B",
    # flake8-simplify (SIM) - Code simplification
    "SIM",
    # flake8-comprehensions (C4) - List/dict comprehension improvements
    "C4",
    # Pylint (PL) - Comprehensive code analysis
    "PL",
    # flake8-pie (PIE) - Miscellaneous improvements
    "PIE",
    # flake8-return (RET) - Return statement improvements
    "RET",
    # flake8-unused-arguments (ARG) - Unused argument detection
    "ARG",
    # flake8-use-pathlib (PTH) - Modern path handling
    "PTH",
    # Ruff-specific rules (RUF) - Ruff's own optimizations
    "RUF",
    # flake8-annotations (ANN) - Type annotation enforcement
    "ANN",
    # flake8-bandit (S) - Security issue detection
    "S",
    # flake8-boolean-trap (FBT) - Boolean parameter issues
    "FBT",
    # flake8-builtins (A) - Builtin shadowing detection
    "A",
    # flake8-commas (COM) - Trailing comma consistency
    "COM",
    # flake8-errmsg (EM) - Exception message best practices
    "EM",
    # flake8-logging-format (G) - Logging best practices
    "G",
    # flake8-implicit-str-concat (ISC) - String concatenation issues
    "ISC",
    # flake8-print (T20) - Print statement detection
    "T20",
    # flake8-quotes (Q) - Quote consistency
    "Q",
    # flake8-self (SLF) - Private member access
    "SLF",
    # flake8-type-checking (TC) - Type checking optimization
    "TC",
    # tryceratops (TRY) - Exception handling best practices
    "TRY",
    # Perflint (PERF) - Performance improvements
    "PERF",
    # refurb (FURB) - Code modernization
    "FURB",
]

# Ignore specific rules that may conflict with AI-generated code patterns
ignore = [
    # Allow print statements for debugging and examples
    "T201",
    # Allow TODO comments
    "FIX002", 
    # Allow assert statements (useful for testing)
    "S101",
    # Allow hardcoded passwords in examples/tests
    "S105", "S106", "S107",
    # Allow subprocess usage (may be needed for system integration)
    "S602", "S603", "S604", "S605", "S606", "S607",
    # Allow magic value comparisons (common in configuration)
    "PLR2004",
    # Allow too many arguments (AI may generate complex functions)
    "PLR0913",
    # Allow too many branches (AI may generate complex logic)
    "PLR0912",
    # Allow too many statements (AI may generate comprehensive functions)
    "PLR0915",
    # Allow missing type annotations for *args and **kwargs
    "ANN002", "ANN003",
    # Allow missing return type annotations for private functions
    "ANN202",
    # Allow boolean positional arguments (common in APIs)
    "FBT001", "FBT002", "FBT003",
    # Allow runtime imports of typing constructs (we use from __future__ import annotations)
    "TC003",
]

# Enable automatic fixing for all fixable rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can have additional flexibility
"test_*.py" = [
    "S101",    # Allow assert statements in tests
    "PLR2004", # Allow magic values in tests
    "ANN",     # Don't require type annotations in tests
    "SLF001",  # Allow private member access in tests
]
"tests/*.py" = [
    "S101",    # Allow assert statements in tests
    "PLR2004", # Allow magic values in tests  
    "ANN",     # Don't require type annotations in tests
    "SLF001",  # Allow private member access in tests
]
# Example/demo files can be more relaxed
"examples/*.py" = [
    "T201",    # Allow print statements in examples
    "S101",    # Allow assert statements in examples
    "PLR2004", # Allow magic values in examples
    "ANN",     # Don't require type annotations in examples
]
# Main script can have print statements
"main.py" = [
    "T201",    # Allow print statements in main
]

[tool.ruff.lint.flake8-annotations]
# Require type annotations for public functions but be flexible for private ones
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.flake8-bandit]
# Security checks but allow common development patterns
check-typed-exception = true

[tool.ruff.lint.flake8-bugbear]
# Enable additional bugbear checks
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-quotes]
# Prefer double quotes for consistency
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.isort]
# Import organization optimized for AI readability
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["app", "src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pylint]
# Pylint configuration for comprehensive analysis
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
# MyPy configuration optimized for AI coding and strict type checking

# Python version and basic settings
python_version = "3.11"
platform = "linux"
show_error_codes = true
show_column_numbers = true
show_error_context = true
color_output = true
error_summary = true
pretty = true

# Strict mode settings - comprehensive type checking for AI-generated code
strict = true

# Additional strict settings beyond the default strict mode
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
warn_unreachable = true
warn_no_return = true

# Type checking behavior optimized for AI coding patterns
disallow_any_generics = true
disallow_any_unimported = false  # Disabled - causes issues with skipped imports
disallow_any_expr = false  # Allow Any in expressions for AI flexibility
disallow_any_decorated = false  # Disabled - causes issues with pytest decorators
disallow_any_explicit = false  # Allow explicit Any for AI code patterns
disallow_subclassing_any = false  # Disabled - causes issues with SQLAlchemy

# Function and method checking
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Import and module handling
no_implicit_reexport = true
strict_equality = true
strict_bytes = true
extra_checks = true

# Error reporting and debugging
show_traceback = true
raise_exceptions = false

# Cache and performance
cache_dir = ".mypy_cache"
sqlite_cache = true
incremental = true

# Per-module configuration for different code types
[[tool.mypy.overrides]]
module = "tests.*"
# More lenient settings for test files
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_expr = true
warn_return_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "grins_platform.tests.*"
# More lenient settings for test files
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_expr = false
warn_return_any = false
disallow_untyped_decorators = false
disable_error_code = ["comparison-overlap", "method-assign", "misc"]

[[tool.mypy.overrides]]
module = "examples.*"
# Relaxed settings for example/demo code
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_expr = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "scripts.*"
# Moderate settings for utility scripts
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false

# Third-party library stubs (add as needed)
[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "pydantic.*",
    "sqlalchemy.*",
    "uvicorn.*",
    "pytest.*",
    "_pytest.*",
    "alembic.*",
    "asyncpg.*",
    "structlog.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# API modules use FastAPI decorators which are not fully typed
[[tool.mypy.overrides]]
module = "grins_platform.api.v1.*"
disallow_untyped_decorators = false

[tool.pyright]
# Pyright configuration for comprehensive type checking alongside MyPy

# Basic settings
pythonVersion = "3.11"
pythonPlatform = "All"
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/node_modules",
    "**/.venv",
    "**/venv",
    "build",
    "dist",
    "**/tests/**",
]

# Type checking mode - strict for maximum safety
typeCheckingMode = "strict"

# Strict mode settings - enable all safety checks
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true

# Diagnostic rule overrides - comprehensive checking
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportImportCycles = "warning"  # Allow import cycles for SQLAlchemy models
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "warning"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportTypedDictNotRequiredAccess = "error"
reportPrivateImportUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportMissingSuperCall = "warning"
reportUninitializedInstanceVariable = "error"
reportInvalidStringEscapeSequence = "error"
reportUnknownParameterType = "warning"  # SQLAlchemy columns have complex types
reportUnknownArgumentType = "warning"  # Pydantic Field() has dynamic defaults
reportUnknownLambdaType = "error"
reportUnknownVariableType = "warning"  # SQLAlchemy query results
reportUnknownMemberType = "warning"  # SQLAlchemy column attributes
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportInvalidTypeVarUse = "error"
reportCallInDefaultInitializer = "none"  # FastAPI/Pydantic use Query() in defaults
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "none"  # SQLAlchemy validators have runtime checks
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "warning"
reportImplicitStringConcatenation = "warning"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportInvalidStubStatement = "error"
reportIncompleteStub = "error"
reportUnsupportedDunderAll = "warning"
reportUnusedCallResult = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnnecessaryTypeIgnoreComment = "none"  # MyPy needs these, pyright doesn't
reportMatchNotExhaustive = "warning"

# Additional strict checks
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"

# Performance and analysis settings
autoImportCompletions = true
indexing = true
useLibraryCodeForTypes = true

# Stub path configuration
stubPath = "typings"

# Execution environments for different Python versions
executionEnvironments = [
    { root = "src", pythonVersion = "3.11", pythonPlatform = "All", reportPrivateUsage = "none", reportUninitializedInstanceVariable = "none" },
]
